# Cpp-Common-Tools

./: .gitignore  CMakeLists.txt  README.md  libCommon.so.0.1
.cache/clangd/index/: CommonLib.cpp.AD17D8E087308930.idx  CommonLib.h.91311669C819E677.idx  Debugging.h.464037E45E58E7EA.idx  Debugging.h.CB213E4A581339F5.idx  DuggingTests.cpp.29E5147E2A6EFA6F.idx  gmock-actions.h.4D4A5419D4506B2E.idx  gmock-all.cc.0D3DB505B7593213.idx  gmock-cardinalities.cc.96A2F2C953EAC65D.idx  gmock-cardinalities.h.6B644A52312E6B70.idx  gmock-function-mocker.h.67BAFE23DE94B762.idx  gmock-generated-actions.h.B292839ADA59A818.idx  gmock-internal-utils.cc.C0BF86045EE7ABB8.idx  gmock-internal-utils.h.F8FB678838097055.idx  gmock-matchers.cc.C332A64B5FC029EF.idx  gmock-matchers.h.864C60422F384BF7.idx  gmock-matchers.h.D7F75E88B7B430C0.idx  gmock-more-actions.h.542E1E14F42FE6F2.idx  gmock-more-matchers.h.D5A993BB2E82ED6C.idx  gmock-nice-strict.h.6745A42AED4910E6.idx  gmock-port.h.BAA97B041AD8CD51.idx  gmock-port.h.E643E5140068BEB5.idx  gmock-pp.h.7F082BF11684672D.idx  gmock-spec-builders.cc.4CB53E1AE8C5B532.idx  gmock-spec-builders.h.650414807C2A1FCF.idx  gmock.cc.0FA51CB3AC7E5BB5.idx  gmock.h.35D481F17407FCB1.idx  gmock_main.cc.F6051E1CCCA33552.idx  gtest-all.cc.6ED9519283A57BFB.idx  gtest-death-test-internal.h.95F4D4DFE0821CD9.idx  gtest-death-test.cc.CF871263CB356A05.idx  gtest-death-test.h.73DCDDD289FF8E02.idx  gtest-filepath.cc.04910D33404FD6FE.idx  (+29 more)
includes/: CommonLib.h  DataTypes.h  Debugging.h  Peeping.h
src/: CommonLib.cpp
tests/: CMakeLists.txt  CommonTests  DuggingTests.cpp
(+1 files in other folders)
